--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
   "dependancies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
