--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependancies": {
+  "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "simple-google-openid": "0.0.11"
