--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "up724980-signoff-3",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.j                                           s",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "author": "Ryan Lee Clark",
   "license": "ISC",
